@@ -1125,6 +1125,9 @@ static int readvolfile(AFPObj *obj, struct afp_volume_name *p1, char *p2, int us
     /* Enable some default options for all volumes */
     save_options[VOLOPT_FLAGS].i_value |= AFPVOL_CACHE;
     save_options[VOLOPT_EA_VFS].i_value = AFPVOL_EA_AUTO;
+    LOG(log_maxdebug, logtype_afpd, "readvolfile: seeding default umask: %04o",
+        obj->options.umask);
+    save_options[VOLOPT_UMASK].i_value = obj->options.umask;
 
     while ( myfgets( buf, sizeof( buf ), fp ) != NULL ) {
         initline( strlen( buf ), buf );
